Prevent text wrap in tasreefs

--- a/src/styles/Tasreef.scss
+++ b/src/styles/Tasreef.scss
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   gap: 16px;
-  min-width: 120px;
   direction: ltr;
 
   .header {
@@ -10,6 +9,9 @@
     justify-content: center;
     align-items: center;
     height: 36px;
+    padding: 0 12px;
+    white-space: nowrap;
+    min-width: 120px;
     border: solid 1px var(--border);
     border-radius: 6px;
     position: relative;
@@ -42,6 +44,7 @@
         align-items: center;
         height: 36px;
         padding: 0 12px;
+        white-space: nowrap;
       }
 
       div + div {
@@ -52,7 +55,10 @@
 
   &.by-gender {
     gap: 16px;
-    min-width: 200px;
+
+    .header {
+      min-width: 200px;
+    }
 
     .person {
       flex-direction: row-reverse;
@@ -64,10 +70,10 @@
     flex-direction: row-reverse;
     flex-wrap: wrap;
     gap: 16px;
-    min-width: 200px;
 
     .header {
       flex-basis: 100%;
+      min-width: 200px;
     }
 
     .person {
